# chip8emu

./: .gitignore
CHIP8/: CHIP8.sln  CMakeLists.txt  chip8.cpp  chip8.h  chip8test.cpp  game.cpp  keymap.cpp  keymap.h
CHIP8/CHIP8/: CHIP8.vcxproj  CHIP8.vcxproj.filters  CMakeLists.txt  chip8.cpp  chip8.h  game.cpp
CHIP8/CHIP8/Debug/: vc142.idb
CHIP8/CHIP8/Debug/CHIP8.tlog/: CHIP8.lastbuildstate
CHIP8/core/: audiodevice.cpp  audiodevice.h  chip8.cpp  chip8.h  keymap.cpp  soundcard.cpp  soundcard.h
CHIP8/disassembler/: disassemble.py  test.csv  tetris.csv
CHIP8/main/: game.cpp
CHIP8/test/: chip8test.cpp  chip8test.h
TEST_EMULATOR/: ch8emu
